@@ -473,8 +473,12 @@ std::string onProjectChange (Task& task, bool scope /* = true */)
       percentage = (count_done * 100 / (count_done + count_pending));
 
     msg << format (STRING_HELPER_PROJECT_COMPL, project, percentage)
-        << " "
-        << format (STRING_HELPER_PROJECT_REM, count_pending, count_pending + count_done);
+        << " ";
+
+    if (count_pending > 1)
+      msg << format (STRING_HELPER_PROJECT_REM, count_pending, count_pending + count_done);
+    else
+      msg << format (STRING_HELPER_PROJECT_REM1, count_pending);
   }
 
   return msg.str ();
